k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-app-deployment
  namespace: notes-app-namespace
  labels:
    app: notes-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notes-app
  template:
    metadata:

      labels:
        app.kubernetes.io/name: notes-app
        app: notes-app
    spec:
      containers:
        - name: notes-app-container
          image: shoeb5401/notes-app:v2
          ports:
            - containerPort: 8000
