k8s/notes-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-app-deployment
  namespace: notes-app-namespace
  labels:
    app: notes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes-app
  template:
    metadata:

      labels:
        app.kubernetes.io/name: notes-app
        app: notes-app
    spec:
      containers:
        - name: notes-app-container
          image: shoeb5401/notes-app:v2
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
