k8s/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: notes-app-namespace
spec:
  selector:
    app: mysql
  clusterIP: None
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
