k8s/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: notes-app-namespace

spec:
  selector:
    app: nginx
  ports:
  - port: 8080
    targetPort: 80
