k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: notes-app-service
  namespace: notes-app-namespace
spec:
  selector:
    app: notes-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
